Fix overflow

--- a/static/products/css/index.css
+++ b/static/products/css/index.css
@@ -202,7 +202,7 @@
 .flex1{
     width: 200px;
     height: 100%;
-    overflow: visible;
+    overflow: hidden;
     position: relative;
 }
 .flex1 img{
